[tool.poetry]
name = "rl-envs-forge"
version = "5.18.0"
description = "Environments for reinforcement learning"
authors = ["mariusdgm <marius.dragomir.dgm@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["pyproject.toml", "assets/labyrinth/sprites/*.png"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
gymnasium = "^0.29.1"
numpy = "^1.24.1"
pygame = "^2.5.1"
setuptools = "^68.0.0"
scipy = "^1.11.2"
sphinx = "^7.2.6"
sphinxcontrib-napoleon = "^0.7"
graphviz = "^0.20.1"
toml = "^0.10.2"
seaborn = "^0.13.0"
sphinx-rtd-theme = "^1.3.0"
networkx = "^3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
